# AI-Agents-HW1

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
config/: setup.json
data/notebooks/: results_analysis.ipynb
docs/: PLAN.md  PRD.md  PRD_lstm.md  PRD_mlp.md  PRD_rnn.md  TODO.md
src/sdk/: sdk.py
src/services/: base_model.py  dataset_generator.py  gatekeeper.py  models_lstm.py  models_mlp.py  models_rnn.py
src/shared/: config.py  constants.py  version.py
tests/: test_dataset.py
tests/unit/: test_config.py  test_gatekeeper.py  test_generator.py  test_models.py
